# TBKOSTER

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile  LICENSE.md  Makefile  README.md  TBKExamples.tgz  cmake_install.cmake
.github/workflows/: compile.yaml  latex.yaml.old
CMakeFiles-old/: CMakeDirectoryInformation.cmake  Makefile.cmake  Makefile2  TargetDirectories.txt
CMakeFiles-old/3.10.2/: CMakeCCompiler.cmake
CMakeFiles-old/UserManual.dir/: build.make
CMakeFiles-old/UserManual_auxclean.dir/: cmake_clean.cmake
CMakeFiles-old/UserManual_dvi.dir/: build.make
CMakeFiles-old/UserManual_ps.dir/: cmake_clean.cmake
CMakeFiles-old/UserManual_safepdf.dir/: build.make  cmake_clean.cmake
CMakeFiles-old/_UserManual.dir/: build.make
CMakeFiles-old/auxclean.dir/: build.make  cmake_clean.cmake
CMakeFiles-old/distclean.dir/: build.make
CMakeFiles-old/doc.dir/: cmake_clean.cmake
CMakeFiles-old/dvi.dir/: cmake_clean.cmake
CMakeFiles-old/html.dir/: build.make  cmake_clean.cmake
CMakeFiles-old/pdf.dir/: build.make  cmake_clean.cmake
CMakeFiles-old/ps.dir/: cmake_clean.cmake
CMakeFiles-old/safepdf.dir/: build.make  cmake_clean.cmake
CMakeModules/: FindMKL.cmake  Findfortran_stdlib.cmake
doc/: Bibliography.bib  CMakeLists.txt  Doxyfile  Formalism.tex  Userguide.tex
doc/doc/: UserManual.tex
doc/src/: Formalism.tex  TBKOSTER-userguide.tex  TBformalism.tex  TBsd.bib  UserManual.dvi  UserManual.tex  Userguide.tex
examples/: README.md  environment_variables
examples/NRL/: environment_variables
examples/WANMOD/example01/: job.sh
examples/collinear/example01/: in_master.txt  job.sh  job_out.txt  out_charge.txt  out_energy.txt  out_hamiltonian_tb.txt  out_log.txt  out_mesh.txt
examples/collinear/example02/: in_master.txt  job.sh  job_out.txt  out_charge.txt  out_energy.txt  out_log.txt  out_mesh.txt
examples/collinear/example03/: in_master.txt  job.sh  job_out.txt  out_charge.txt  out_energy.txt  out_log.txt  out_mesh.txt
examples/collinear/example04/: in_master.txt  job.sh  out_charge.txt  out_energy.txt  out_log.txt  out_mesh.txt
examples/collinear/example05/: in_master.txt  job.sh  out_charge.txt  out_energy.txt  out_log.txt  out_mesh.txt
examples/collinear/example06/: in_master.txt  job.sh  out_charge.txt  out_energy.txt  out_hamiltonian_tb.txt  out_log.txt  out_log_all.txt  out_mesh.txt
examples/collinear/example07/: in_master.txt  job.sh  out_charge.txt  out_energy.txt  out_log.txt
examples/collinear/example08/: in_master.txt  job.sh  out_charge.txt  out_energy.txt  out_log.txt  out_mesh.txt
examples/collinear/example09/: in_master.txt  job.sh  out_charge.txt  out_energy.txt  out_log.txt  out_mesh.txt
examples/collinear/example10/: Makefile  in_master.orig  in_master.txt  job.sh  out_charge.txt  out_energy.txt  out_hamiltonian_tb.txt  out_log.txt  out_log.txt-save  out_mesh.txt
examples/collinear/example11/: in_master.txt  job.sh  out_charge.txt  out_energy.txt  out_log.txt  out_mesh.txt
examples/collinear/example12/: in_master.txt  job.sh  out_charge.txt  out_energy.txt  out_log.txt  out_units.txt
examples/collinear/example13/: in_master.txt  job.sh  out_charge.txt  out_energy.txt  out_hamiltonian_tb.txt  out_log.txt  out_mesh.txt
examples/collinear/example14/: in_charge.txt  in_master.txt  job.sh  out_charge.txt  out_energy.txt  out_log.txt  out_mesh.txt
files/: README.md
files/3d-metals-trimer-sd/: README.md  co-trimer-dynamol  co-trimer-dynamol-damping  co-trimer-uppasd  co-trimer-uppasd-damping  cr-trimer-dynamol  cr-trimer-dynamol-damping  cr-trimer-uppasd  cr-trimer-uppasd-damping  fe-trimer-dynamol  fe-trimer-dynamol-damping  fe-trimer-uppasd  fe-trimer-uppasd-damping  job.sh
python/: .gdbinit  plot_band.py  plot_band.py-save  plot_dos.py  pretty_printers.py
src/: CMakeLists.txt  DyNaMol.code-workspace  Makefile  atom.f90  atom_tb.f90  band_structure.f90  bands.f90  calculation.f90  charge.f90  cmake_install.cmake  constant.f90  density_of_states.f90  element.f90  element.f90_cyrille  element.f90_tempo  element_tb.f90  energy.f90  force_theorem.f90  forces.f90  hamiltonian_tb.f90  hamiltonian_tb.f90_old  lattice.f90  mae.f90  magnetic_anisotropy.f90  magnetic_force_theorem.f90  main.f90.in  math.f90  mesh.f90  mixing.f90  molecular_dynamics.f90  precision.f90  self_consistent_field.f90  spin_dynamics.f90  string.f90  units.f90
tb_parameters/: c_par_105  co_par_fcc_bcc_sc_gga_fl  dd_t2g_par  ni_par_fcc_bcc_sc_gga_fl  pt_par_fcc_bcc_sc_lda_fl  rh_par_fcc_bcc_sc_gga_fl  zr_par_papa
tb_parameters/miscellaneous/: Co_no_onsite.par  Fe_no_onsite.par  ag_par  al_par  au_par  au_par_99  au_par_fcc_bcc_sc_lda  au_par_fcc_bcc_sc_lda_fl  au_par_fcc_bcc_sc_lda_fl2  au_par_fcc_bcc_sc_lda_sr  au_par_fcc_bcc_sc_lda_v3  au_par_fcc_bcc_sc_lda_v4  au_par_wire_lda_fl  ba_par  c_par_fixed_diag  c_par_test  ca_par_315  co_par_1996  co_par_2000  co_par_fcc_bcc_sc_gga  co_par_fcc_bcc_sc_gga_dd_no_overlaps  co_par_fcc_bcc_sc_gga_no_d_overlaps  co_par_fcc_bcc_sc_gga_sr  cr_par  cr_par_bck  cr_par_fcc_bcc_sc_gga  cr_par_fcc_bcc_sc_gga_fl  cr_par_fcc_bcc_sc_gga_sr  cr_par_fcc_bcc_sc_gga_tempo  cr_par_fcc_bcc_sc_gga_tempo_bck  cr_par_fixed_diag  cu_par  cu_par_03  cu_par_96  cu_par_99  cu_par_fcc_bcc_sc_gga_fl  dd_par  fe_cohen_par  fe_dd_andje_par  fe_dd_mcdjs_par  (+71 more)
tools/: CMakeLists.txt  CMakeLists.txt_save  band_weight.gnuplot  bands.f90  build_kpoints.f90  col2nc.f90  dat2gnu.f90  fermisurface.f90  mae.f90  mft.f90  pdos.f90
unit_tests/: CMakeLists.txt
unit_tests/atom/: CMakeLists.txt  Makefile.old  in_atom.txt  main.f90
unit_tests/element/: CMakeLists.txt  Makefile.old  in_element.txt  in_element_2.txt  main.f90  out_element.txt
unit_tests/element_tb/: CMakeLists.txt  Makefile.old  in_element.txt  in_element_2.txt  main.f90  out_element.txt
unit_tests/lattice/: CMakeLists.txt  Makefile.old  in_lattice.txt  main.f90  out_lattice.txt
unit_tests/math/: CMakeLists.txt  Makefile.old  main.f90
unit_tests/string/: CMakeLists.txt  Makefile.old  main.f90
(+6258 files in other folders)
