# Add unit tests
add_subdirectory(atom)
add_subdirectory(element)
add_subdirectory(element_tb)
add_subdirectory(lattice)
add_subdirectory(math)
add_subdirectory(string)
enable_testing()
add_test(NAME atom_test COMMAND atom_test WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/atom)
add_test(NAME element_test COMMAND element_test WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/element)
add_test(NAME element_tb_test COMMAND element_tb_test WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/element_tb)
add_test(NAME lattice_test COMMAND lattice_test WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/lattice)
add_test(NAME math_test COMMAND math_test WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/math)
add_test(NAME string_test COMMAND string_test WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/string)